// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SampleTypePropertiesPanel appPropertiesOnly 1`] = `
<div
  className="domain-form-panel domain-panel-no-theme panel panel-default"
>
  <div
    className="domain-panel-header panel-heading domain-panel-header-expanded domain-panel-header-no-theme"
    id="sample-type-properties-hdr"
    onClick={[Function]}
  >
    <span
      className="domain-panel-title"
    >
      Sample Type Properties
    </span>
  </div>
  <div
    className="panel-body"
  >
    <div
      className="margin-bottom row"
    >
      <div
        className="col-xs-12"
      >
        <div
          className="row"
        >
          <div
            className="col-xs-12"
          >
            <a
              className="domain-field-float-right"
              href="https://www.labkey.org/Documentation/wiki-page.view?referrer=inPage&name=createSampleSet"
              rel="noopener noreferrer"
              target="_blank"
            >
              Learn more about designing sample types
            </a>
          </div>
        </div>
      </div>
    </div>
    <div
      className="domain-field-section-heading"
    >
      General Properties
    </div>
    <form
      className=""
    >
      <div
        className="margin-bottom margin-top row"
      >
        <div
          className="col-xs-2"
        >
          <span
            className="domain-no-wrap"
          >
            Name
             *
          </span>
        </div>
        <div
          className="col-xs-10"
        >
          <input
            className="form-control"
            id="entity-name"
            onChange={[Function]}
            placeholder="Enter a name for this sample type"
            type="text"
            value=""
          />
        </div>
      </div>
      <div
        className="margin-bottom row"
      >
        <div
          className="col-xs-2"
        >
          <span
            className="domain-no-wrap"
          >
            Description
            <span
              className="label-help-target"
              onMouseOut={[Function]}
              onMouseOver={[Function]}
            >
              <span
                className="label-help-icon fa fa-question-circle"
              />
            </span>
            
          </span>
        </div>
        <div
          className="col-xs-10"
        >
          <textarea
            className="form-control"
            id="entity-description"
            onChange={[Function]}
            value=""
          />
        </div>
      </div>
      <div
        className="margin-bottom row"
      >
        <div
          className="col-xs-2"
        >
          <div
            className="name-expression-label-div"
            onMouseEnter={[Function]}
          >
            Naming 
            <span
              className="domain-no-wrap"
            >
              Pattern
              <span
                className="label-help-target"
                onMouseOut={[Function]}
                onMouseOver={[Function]}
              >
                <span
                  className="label-help-icon fa fa-question-circle"
                />
              </span>
              
            </span>
          </div>
        </div>
        <div
          className="col-xs-10"
        >
          <input
            className="form-control"
            id="entity-nameExpression"
            onChange={[Function]}
            placeholder="Enter a naming pattern (e.g., S-\${now:date}-\${dailySampleCount})"
            type="text"
            value=""
          />
        </div>
      </div>
    </form>
    <div
      className="row"
    >
      <div
        className="col-xs-2"
      />
      <div
        className="col-xs-10"
      >
        <span>
          <div
            className="form-group"
          >
            <div>
              <span
                className="container--action-button btn btn-default"
                onClick={[Function]}
              >
                <i
                  className="fa fa-plus-circle container--addition-icon"
                />
                 Add 
              </span>
              <span
                className="label-help-target"
                onMouseOut={[Function]}
                onMouseOver={[Function]}
              >
                <span
                  className="label-help-icon fa fa-question-circle"
                />
              </span>
            </div>
          </div>
        </span>
      </div>
    </div>
    <div
      className="domain-field-section-heading top-spacing"
    >
      Storage Settings
    </div>
    <div
      className="margin-top row"
    >
      <div
        className="col-xs-2"
      >
        Label 
        <span
          className="domain-no-wrap"
        >
          Color
          <span
            className="label-help-target"
            onMouseOut={[Function]}
            onMouseOver={[Function]}
          >
            <span
              className="label-help-icon fa fa-question-circle"
            />
          </span>
          
        </span>
      </div>
      <div
        className="col-xs-10"
      >
        <div
          className="color-picker"
        >
          <button
            className="color-picker__button btn btn-default"
            onClick={[Function]}
            type="button"
          >
            None
            <i
              className="fa fa-caret-down"
            />
          </button>
          <div
            className="color-picker__picker"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`SampleTypePropertiesPanel default props 1`] = `
<div
  className="domain-form-panel domain-panel-no-theme panel panel-default"
>
  <div
    className="domain-panel-header panel-heading domain-panel-header-expanded domain-panel-header-no-theme"
    id="sample-type-properties-hdr"
    onClick={[Function]}
  >
    <span
      className="domain-panel-title"
    >
      Sample Type Properties
    </span>
  </div>
  <div
    className="panel-body"
  >
    <div
      className="margin-bottom row"
    >
      <div
        className="col-xs-12"
      >
        <div
          className="row"
        >
          <div
            className="col-xs-12"
          >
            <a
              className="domain-field-float-right"
              href="https://www.labkey.org/Documentation/wiki-page.view?referrer=inPage&name=createSampleSet"
              rel="noopener noreferrer"
              target="_blank"
            >
              Learn more about designing sample types
            </a>
          </div>
        </div>
      </div>
    </div>
    <form
      className=""
    >
      <div
        className="margin-bottom margin-top row"
      >
        <div
          className="col-xs-2"
        >
          <span
            className="domain-no-wrap"
          >
            Name
             *
          </span>
        </div>
        <div
          className="col-xs-10"
        >
          <input
            className="form-control"
            id="entity-name"
            onChange={[Function]}
            placeholder="Enter a name for this sample type"
            type="text"
            value=""
          />
        </div>
      </div>
      <div
        className="margin-bottom row"
      >
        <div
          className="col-xs-2"
        >
          <span
            className="domain-no-wrap"
          >
            Description
            <span
              className="label-help-target"
              onMouseOut={[Function]}
              onMouseOver={[Function]}
            >
              <span
                className="label-help-icon fa fa-question-circle"
              />
            </span>
            
          </span>
        </div>
        <div
          className="col-xs-10"
        >
          <textarea
            className="form-control"
            id="entity-description"
            onChange={[Function]}
            value=""
          />
        </div>
      </div>
      <div
        className="margin-bottom row"
      >
        <div
          className="col-xs-2"
        >
          <div
            className="name-expression-label-div"
            onMouseEnter={[Function]}
          >
            Naming 
            <span
              className="domain-no-wrap"
            >
              Pattern
              <span
                className="label-help-target"
                onMouseOut={[Function]}
                onMouseOver={[Function]}
              >
                <span
                  className="label-help-icon fa fa-question-circle"
                />
              </span>
              
            </span>
          </div>
        </div>
        <div
          className="col-xs-10"
        >
          <input
            className="form-control"
            id="entity-nameExpression"
            onChange={[Function]}
            placeholder="Enter a naming pattern (e.g., S-\${now:date}-\${dailySampleCount})"
            type="text"
            value=""
          />
        </div>
      </div>
    </form>
    <div
      className="row"
    >
      <div
        className="col-xs-2"
      />
      <div
        className="col-xs-10"
      >
        <span>
          <div
            className="form-group"
          >
            <div>
              <span
                className="container--action-button btn btn-default"
                onClick={[Function]}
              >
                <i
                  className="fa fa-plus-circle container--addition-icon"
                />
                 Add 
              </span>
              <span
                className="label-help-target"
                onMouseOut={[Function]}
                onMouseOver={[Function]}
              >
                <span
                  className="label-help-icon fa fa-question-circle"
                />
              </span>
            </div>
          </div>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`SampleTypePropertiesPanel include dataclass and use custom labels 1`] = `
<div
  className="domain-form-panel domain-panel-no-theme panel panel-default"
>
  <div
    className="domain-panel-header panel-heading domain-panel-header-expanded domain-panel-header-no-theme"
    id="sample-type-properties-hdr"
    onClick={[Function]}
  >
    <span
      className="domain-panel-title"
    >
      Sample Type Properties
    </span>
  </div>
  <div
    className="panel-body"
  >
    <div
      className="margin-bottom row"
    >
      <div
        className="col-xs-12"
      >
        <div
          className="row"
        >
          <div
            className="col-xs-12"
          >
            <a
              className="domain-field-float-right"
              href="https://www.labkey.org/Documentation/wiki-page.view?referrer=inPage&name=createSampleSet"
              rel="noopener noreferrer"
              target="_blank"
            >
              Learn more about designing sample types
            </a>
          </div>
        </div>
      </div>
    </div>
    <form
      className=""
    >
      <div
        className="margin-bottom margin-top row"
      >
        <div
          className="col-xs-2"
        >
          <span
            className="domain-no-wrap"
          >
            Name
             *
          </span>
        </div>
        <div
          className="col-xs-10"
        >
          <input
            className="form-control"
            id="entity-name"
            onChange={[Function]}
            placeholder="Enter a name for this sample type"
            type="text"
            value=""
          />
        </div>
      </div>
      <div
        className="margin-bottom row"
      >
        <div
          className="col-xs-2"
        >
          <span
            className="domain-no-wrap"
          >
            Description
            <span
              className="label-help-target"
              onMouseOut={[Function]}
              onMouseOver={[Function]}
            >
              <span
                className="label-help-icon fa fa-question-circle"
              />
            </span>
            
          </span>
        </div>
        <div
          className="col-xs-10"
        >
          <textarea
            className="form-control"
            id="entity-description"
            onChange={[Function]}
            value=""
          />
        </div>
      </div>
      <div
        className="margin-bottom row"
      >
        <div
          className="col-xs-2"
        >
          <div
            className="name-expression-label-div"
            onMouseEnter={[Function]}
          >
            Naming 
            <span
              className="domain-no-wrap"
            >
              Pattern
              <span
                className="label-help-target"
                onMouseOut={[Function]}
                onMouseOver={[Function]}
              >
                <span
                  className="label-help-icon fa fa-question-circle"
                />
              </span>
              
            </span>
          </div>
        </div>
        <div
          className="col-xs-10"
        >
          <input
            className="form-control"
            id="entity-nameExpression"
            onChange={[Function]}
            placeholder="Enter a naming pattern (e.g., S-\${now:date}-\${dailySampleCount})"
            type="text"
            value=""
          />
        </div>
      </div>
    </form>
    <div
      className="row"
    >
      <div
        className="col-xs-2"
      />
      <div
        className="col-xs-10"
      >
        <span>
          <div
            className="form-group"
          >
            <div>
              <span
                className="container--action-button btn btn-default"
                onClick={[Function]}
              >
                <i
                  className="fa fa-plus-circle container--addition-icon"
                />
                 Add 
              </span>
              <span
                className="label-help-target"
                onMouseOut={[Function]}
                onMouseOver={[Function]}
              >
                <span
                  className="label-help-icon fa fa-question-circle"
                />
              </span>
            </div>
          </div>
        </span>
      </div>
    </div>
    <div
      className="row"
    >
      <div
        className="col-xs-2"
      />
      <div
        className="col-xs-10"
      >
        <span>
          <div
            className="form-group"
          >
            <div>
              <span
                className="container--action-button btn btn-default"
                onClick={[Function]}
              >
                <i
                  className="fa fa-plus-circle container--addition-icon"
                />
                 Add 
              </span>
              <span
                className="label-help-target"
                onMouseOut={[Function]}
                onMouseOver={[Function]}
              >
                <span
                  className="label-help-icon fa fa-question-circle"
                />
              </span>
            </div>
          </div>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`SampleTypePropertiesPanel includeMetricUnitProperty 1`] = `
<div
  className="domain-form-panel domain-panel-no-theme panel panel-default"
>
  <div
    className="domain-panel-header panel-heading domain-panel-header-expanded domain-panel-header-no-theme"
    id="sample-type-properties-hdr"
    onClick={[Function]}
  >
    <span
      className="domain-panel-title"
    >
      Sample Type Properties
    </span>
  </div>
  <div
    className="panel-body"
  >
    <div
      className="margin-bottom row"
    >
      <div
        className="col-xs-12"
      >
        <div
          className="row"
        >
          <div
            className="col-xs-12"
          >
            <a
              className="domain-field-float-right"
              href="https://www.labkey.org/Documentation/wiki-page.view?referrer=inPage&name=createSampleSet"
              rel="noopener noreferrer"
              target="_blank"
            >
              Learn more about designing sample types
            </a>
          </div>
        </div>
      </div>
    </div>
    <div
      className="domain-field-section-heading"
    >
      General Properties
    </div>
    <form
      className=""
    >
      <div
        className="margin-bottom margin-top row"
      >
        <div
          className="col-xs-2"
        >
          <span
            className="domain-no-wrap"
          >
            Name
             *
          </span>
        </div>
        <div
          className="col-xs-10"
        >
          <input
            className="form-control"
            id="entity-name"
            onChange={[Function]}
            placeholder="Enter a name for this sample type"
            type="text"
            value=""
          />
        </div>
      </div>
      <div
        className="margin-bottom row"
      >
        <div
          className="col-xs-2"
        >
          <span
            className="domain-no-wrap"
          >
            Description
            <span
              className="label-help-target"
              onMouseOut={[Function]}
              onMouseOver={[Function]}
            >
              <span
                className="label-help-icon fa fa-question-circle"
              />
            </span>
            
          </span>
        </div>
        <div
          className="col-xs-10"
        >
          <textarea
            className="form-control"
            id="entity-description"
            onChange={[Function]}
            value=""
          />
        </div>
      </div>
      <div
        className="margin-bottom row"
      >
        <div
          className="col-xs-2"
        >
          <div
            className="name-expression-label-div"
            onMouseEnter={[Function]}
          >
            Naming 
            <span
              className="domain-no-wrap"
            >
              Pattern
              <span
                className="label-help-target"
                onMouseOut={[Function]}
                onMouseOver={[Function]}
              >
                <span
                  className="label-help-icon fa fa-question-circle"
                />
              </span>
              
            </span>
          </div>
        </div>
        <div
          className="col-xs-10"
        >
          <input
            className="form-control"
            id="entity-nameExpression"
            onChange={[Function]}
            placeholder="Enter a naming pattern (e.g., S-\${now:date}-\${dailySampleCount})"
            type="text"
            value=""
          />
        </div>
      </div>
    </form>
    <div
      className="row"
    >
      <div
        className="col-xs-2"
      />
      <div
        className="col-xs-10"
      >
        <span>
          <div
            className="form-group"
          >
            <div>
              <span
                className="container--action-button btn btn-default"
                onClick={[Function]}
              >
                <i
                  className="fa fa-plus-circle container--addition-icon"
                />
                 Add 
              </span>
              <span
                className="label-help-target"
                onMouseOut={[Function]}
                onMouseOver={[Function]}
              >
                <span
                  className="label-help-icon fa fa-question-circle"
                />
              </span>
            </div>
          </div>
        </span>
      </div>
    </div>
    <div
      className="domain-field-section-heading top-spacing"
    >
      Storage Settings
    </div>
    <div
      className="margin-top row"
    >
      <div
        className="col-xs-2"
      >
        Label 
        <span
          className="domain-no-wrap"
        >
          Color
          <span
            className="label-help-target"
            onMouseOut={[Function]}
            onMouseOver={[Function]}
          >
            <span
              className="label-help-icon fa fa-question-circle"
            />
          </span>
          
        </span>
      </div>
      <div
        className="col-xs-10"
      >
        <div
          className="color-picker"
        >
          <button
            className="color-picker__button btn btn-default"
            onClick={[Function]}
            type="button"
          >
            None
            <i
              className="fa fa-caret-down"
            />
          </button>
          <div
            className="color-picker__picker"
          />
        </div>
      </div>
    </div>
    <div
      className="margin-top row"
    >
      <div
        className="col-xs-2"
      >
        Metric 
        <span
          className="domain-no-wrap"
        >
          Unit
          <span
            className="label-help-target"
            onMouseOut={[Function]}
            onMouseOver={[Function]}
          >
            <span
              className="label-help-icon fa fa-question-circle"
            />
          </span>
          
        </span>
      </div>
      <div
        className="col-xs-3"
      >
        <input
          className="form-control"
          name="metricUnit"
          onChange={[Function]}
          placeholder="Enter a unit"
          type="text"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`SampleTypePropertiesPanel metricUnitOptions 1`] = `
<div
  className="domain-form-panel domain-panel-no-theme panel panel-default"
>
  <div
    className="domain-panel-header panel-heading domain-panel-header-expanded domain-panel-header-no-theme"
    id="sample-type-properties-hdr"
    onClick={[Function]}
  >
    <span
      className="domain-panel-title"
    >
      Sample Type Properties
    </span>
  </div>
  <div
    className="panel-body"
  >
    <div
      className="margin-bottom row"
    >
      <div
        className="col-xs-12"
      >
        <div
          className="row"
        >
          <div
            className="col-xs-12"
          >
            <a
              className="domain-field-float-right"
              href="https://www.labkey.org/Documentation/wiki-page.view?referrer=inPage&name=createSampleSet"
              rel="noopener noreferrer"
              target="_blank"
            >
              Learn more about designing sample types
            </a>
          </div>
        </div>
      </div>
    </div>
    <div
      className="domain-field-section-heading"
    >
      General Properties
    </div>
    <form
      className=""
    >
      <div
        className="margin-bottom margin-top row"
      >
        <div
          className="col-xs-2"
        >
          <span
            className="domain-no-wrap"
          >
            Name
             *
          </span>
        </div>
        <div
          className="col-xs-10"
        >
          <input
            className="form-control"
            id="entity-name"
            onChange={[Function]}
            placeholder="Enter a name for this sample type"
            type="text"
            value=""
          />
        </div>
      </div>
      <div
        className="margin-bottom row"
      >
        <div
          className="col-xs-2"
        >
          <span
            className="domain-no-wrap"
          >
            Description
            <span
              className="label-help-target"
              onMouseOut={[Function]}
              onMouseOver={[Function]}
            >
              <span
                className="label-help-icon fa fa-question-circle"
              />
            </span>
            
          </span>
        </div>
        <div
          className="col-xs-10"
        >
          <textarea
            className="form-control"
            id="entity-description"
            onChange={[Function]}
            value=""
          />
        </div>
      </div>
      <div
        className="margin-bottom row"
      >
        <div
          className="col-xs-2"
        >
          <div
            className="name-expression-label-div"
            onMouseEnter={[Function]}
          >
            Naming 
            <span
              className="domain-no-wrap"
            >
              Pattern
              <span
                className="label-help-target"
                onMouseOut={[Function]}
                onMouseOver={[Function]}
              >
                <span
                  className="label-help-icon fa fa-question-circle"
                />
              </span>
              
            </span>
          </div>
        </div>
        <div
          className="col-xs-10"
        >
          <input
            className="form-control"
            id="entity-nameExpression"
            onChange={[Function]}
            placeholder="Enter a naming pattern (e.g., S-\${now:date}-\${dailySampleCount})"
            type="text"
            value=""
          />
        </div>
      </div>
    </form>
    <div
      className="row"
    >
      <div
        className="col-xs-2"
      />
      <div
        className="col-xs-10"
      >
        <span>
          <div
            className="form-group"
          >
            <div>
              <span
                className="container--action-button btn btn-default"
                onClick={[Function]}
              >
                <i
                  className="fa fa-plus-circle container--addition-icon"
                />
                 Add 
              </span>
              <span
                className="label-help-target"
                onMouseOut={[Function]}
                onMouseOver={[Function]}
              >
                <span
                  className="label-help-icon fa fa-question-circle"
                />
              </span>
            </div>
          </div>
        </span>
      </div>
    </div>
    <div
      className="domain-field-section-heading top-spacing"
    >
      Storage Settings
    </div>
    <div
      className="margin-top row"
    >
      <div
        className="col-xs-2"
      >
        Label 
        <span
          className="domain-no-wrap"
        >
          Color
          <span
            className="label-help-target"
            onMouseOut={[Function]}
            onMouseOver={[Function]}
          >
            <span
              className="label-help-icon fa fa-question-circle"
            />
          </span>
          
        </span>
      </div>
      <div
        className="col-xs-10"
      >
        <div
          className="color-picker"
        >
          <button
            className="color-picker__button btn btn-default"
            onClick={[Function]}
            type="button"
          >
            None
            <i
              className="fa fa-caret-down"
            />
          </button>
          <div
            className="color-picker__picker"
          />
        </div>
      </div>
    </div>
    <div
      className="margin-top row"
    >
      <div
        className="col-xs-2"
      >
        Stored Amount Display 
        <span
          className="domain-no-wrap"
        >
          Unit
          <span
            className="label-help-target"
            onMouseOut={[Function]}
            onMouseOver={[Function]}
          >
            <span
              className="label-help-icon fa fa-question-circle"
            />
          </span>
           *
        </span>
      </div>
      <div
        className="col-xs-3"
      >
        <div
          className="select-input-container sampleset-metric-unit-select-container"
        >
          <div
            className="sampleset-metric-unit-select"
          >
            <div
              className="select-input css-b62m3t-container"
              id="selectinput-0"
              onKeyDown={[Function]}
            >
              <span
                className="css-1f43avz-a11yText-A11yText"
                id="react-select-2-live-region"
              />
              <span
                aria-atomic="false"
                aria-live="polite"
                aria-relevant="additions text"
                className="css-1f43avz-a11yText-A11yText"
              />
              <div
                className="select-input__control css-13cymwt-control"
                onMouseDown={[Function]}
                onTouchEnd={[Function]}
              >
                <div
                  className="select-input__value-container css-1fdsijx-ValueContainer"
                >
                  <div
                    className="select-input__placeholder css-1jqq78o-placeholder"
                    id="react-select-2-placeholder"
                  >
                    Select a unit...
                  </div>
                  <div
                    className="select-input__input-container css-qbdosj-Input"
                    data-value=""
                  >
                    <input
                      aria-autocomplete="list"
                      aria-describedby="react-select-2-placeholder"
                      aria-expanded={false}
                      aria-haspopup={true}
                      autoCapitalize="none"
                      autoComplete="off"
                      autoCorrect="off"
                      className="select-input__input"
                      disabled={false}
                      id="react-select-2-input"
                      onBlur={[Function]}
                      onChange={[Function]}
                      onFocus={[Function]}
                      required={true}
                      role="combobox"
                      spellCheck="false"
                      style={
                        {
                          "background": 0,
                          "border": 0,
                          "color": "inherit",
                          "font": "inherit",
                          "gridArea": "1 / 2",
                          "label": "input",
                          "margin": 0,
                          "minWidth": "2px",
                          "opacity": 1,
                          "outline": 0,
                          "padding": 0,
                          "width": "100%",
                        }
                      }
                      tabIndex={0}
                      type="text"
                      value=""
                    />
                  </div>
                </div>
                <div
                  className="select-input__indicators css-1hb7zxy-IndicatorsContainer"
                >
                  <span
                    className="select-input__indicator-separator css-1u9des2-indicatorSeparator"
                  />
                  <div
                    aria-hidden="true"
                    className="select-input__indicator select-input__dropdown-indicator css-1xc3v61-indicatorContainer"
                    onMouseDown={[Function]}
                    onTouchEnd={[Function]}
                  >
                    <svg
                      aria-hidden="true"
                      className="css-tj5bde-Svg"
                      focusable="false"
                      height={20}
                      viewBox="0 0 20 20"
                      width={20}
                    >
                      <path
                        d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                      />
                    </svg>
                  </div>
                </div>
              </div>
              <input
                name="metricUnit"
                type="hidden"
                value=""
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`SampleTypePropertiesPanel nameExpressionInfoUrl 1`] = `
<div
  className="domain-form-panel domain-panel-no-theme panel panel-default"
>
  <div
    className="domain-panel-header panel-heading domain-panel-header-expanded domain-panel-header-no-theme"
    id="sample-type-properties-hdr"
    onClick={[Function]}
  >
    <span
      className="domain-panel-title"
    >
      Sample Type Properties
    </span>
  </div>
  <div
    className="panel-body"
  >
    <div
      className="margin-bottom row"
    >
      <div
        className="col-xs-12"
      >
        <div
          className="row"
        >
          <div
            className="col-xs-12"
          >
            <a
              className="domain-field-float-right"
              href="https://www.labkey.org/Documentation/wiki-page.view?referrer=inPage&name=createSampleSet"
              rel="noopener noreferrer"
              target="_blank"
            >
              Learn more about designing sample types
            </a>
          </div>
        </div>
      </div>
    </div>
    <form
      className=""
    >
      <div
        className="margin-bottom margin-top row"
      >
        <div
          className="col-xs-2"
        >
          <span
            className="domain-no-wrap"
          >
            Name
             *
          </span>
        </div>
        <div
          className="col-xs-10"
        >
          <input
            className="form-control"
            id="entity-name"
            onChange={[Function]}
            placeholder="Enter a name for this sample type"
            type="text"
            value=""
          />
        </div>
      </div>
      <div
        className="margin-bottom row"
      >
        <div
          className="col-xs-2"
        >
          <span
            className="domain-no-wrap"
          >
            Description
            <span
              className="label-help-target"
              onMouseOut={[Function]}
              onMouseOver={[Function]}
            >
              <span
                className="label-help-icon fa fa-question-circle"
              />
            </span>
            
          </span>
        </div>
        <div
          className="col-xs-10"
        >
          <textarea
            className="form-control"
            id="entity-description"
            onChange={[Function]}
            value=""
          />
        </div>
      </div>
      <div
        className="margin-bottom row"
      >
        <div
          className="col-xs-2"
        >
          <div
            className="name-expression-label-div"
            onMouseEnter={[Function]}
          >
            Naming 
            <span
              className="domain-no-wrap"
            >
              Pattern
              <span
                className="label-help-target"
                onMouseOut={[Function]}
                onMouseOver={[Function]}
              >
                <span
                  className="label-help-icon fa fa-question-circle"
                />
              </span>
              
            </span>
          </div>
        </div>
        <div
          className="col-xs-10"
        >
          <input
            className="form-control"
            id="entity-nameExpression"
            onChange={[Function]}
            placeholder="Enter a naming pattern (e.g., S-\${now:date}-\${dailySampleCount})"
            type="text"
            value=""
          />
        </div>
      </div>
    </form>
    <div
      className="row"
    >
      <div
        className="col-xs-2"
      />
      <div
        className="col-xs-10"
      >
        <span>
          <div
            className="form-group"
          >
            <div>
              <span
                className="container--action-button btn btn-default"
                onClick={[Function]}
              >
                <i
                  className="fa fa-plus-circle container--addition-icon"
                />
                 Add 
              </span>
              <span
                className="label-help-target"
                onMouseOut={[Function]}
                onMouseOver={[Function]}
              >
                <span
                  className="label-help-icon fa fa-question-circle"
                />
              </span>
            </div>
          </div>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`SampleTypePropertiesPanel with aliquot preview name 1`] = `
<ComponentWithDomainPropertiesPanelCollapse
  aliquotNamePatternProps={
    {
      "showAliquotNameExpression": true,
    }
  }
  appPropertiesOnly={false}
  collapsed={false}
  controlledCollapse={false}
  initCollapsed={false}
  model={
    Immutable.Record {
      "rowId": 1,
      "name": undefined,
      "nameReadOnly": undefined,
      "nameExpression": undefined,
      "aliquotNameExpression": "S-\${\${AliquotedFrom.:withCounter}}",
      "description": undefined,
      "labelColor": undefined,
      "metricUnit": undefined,
      "parentAliases": undefined,
      "importAliases": Immutable.Map {},
      "domainId": undefined,
      "domain": Immutable.Record {
        "name": undefined,
        "container": undefined,
        "description": undefined,
        "domainURI": undefined,
        "domainId": null,
        "allowFileLinkProperties": false,
        "allowAttachmentProperties": false,
        "allowFlagProperties": true,
        "allowSampleSubjectProperties": true,
        "allowTextChoiceProperties": true,
        "allowTimepointProperties": false,
        "allowUserProperties": true,
        "showDefaultValueSettings": false,
        "defaultDefaultValueType": undefined,
        "defaultValueOptions": Immutable.List [],
        "fields": Immutable.List [],
        "indices": Immutable.List [],
        "domainException": undefined,
        "mandatoryFieldNames": Immutable.List [],
        "reservedFieldNames": Immutable.List [],
        "newDesignFields": undefined,
        "instructions": undefined,
        "domainKindName": undefined,
        "schemaName": undefined,
        "queryName": undefined,
        "disabledSystemFields": undefined,
      },
      "autoLinkTargetContainerId": undefined,
      "autoLinkCategory": undefined,
      "excludedContainerIds": undefined,
      "exception": undefined,
    }
  }
  namePreviews={
    [
      null,
      "S-parentSample-1",
    ]
  }
  onAddParentAlias={[Function]}
  onAddUniqueIdField={[Function]}
  onParentAliasChange={[Function]}
  onRemoveParentAlias={[Function]}
  panelStatus="NONE"
  parentOptions={[]}
  updateModel={[Function]}
  useTheme={false}
  validate={false}
>
  <SampleTypePropertiesPanelImpl
    aliquotNamePatternProps={
      {
        "showAliquotNameExpression": true,
      }
    }
    appPropertiesOnly={false}
    collapsed={false}
    controlledCollapse={false}
    dataClassAliasCaption="Data Class Alias"
    dataClassParentageLabel="data class"
    dataClassTypeCaption="Data Class"
    helpTopic="createSampleSet"
    metricUnitProps={
      {
        "metricUnitHelpMsg": "The unit of measurement used for the sample type.",
        "metricUnitLabel": "Metric Unit",
      }
    }
    model={
      Immutable.Record {
        "rowId": 1,
        "name": undefined,
        "nameReadOnly": undefined,
        "nameExpression": undefined,
        "aliquotNameExpression": "S-\${\${AliquotedFrom.:withCounter}}",
        "description": undefined,
        "labelColor": undefined,
        "metricUnit": undefined,
        "parentAliases": undefined,
        "importAliases": Immutable.Map {},
        "domainId": undefined,
        "domain": Immutable.Record {
          "name": undefined,
          "container": undefined,
          "description": undefined,
          "domainURI": undefined,
          "domainId": null,
          "allowFileLinkProperties": false,
          "allowAttachmentProperties": false,
          "allowFlagProperties": true,
          "allowSampleSubjectProperties": true,
          "allowTextChoiceProperties": true,
          "allowTimepointProperties": false,
          "allowUserProperties": true,
          "showDefaultValueSettings": false,
          "defaultDefaultValueType": undefined,
          "defaultValueOptions": Immutable.List [],
          "fields": Immutable.List [],
          "indices": Immutable.List [],
          "domainException": undefined,
          "mandatoryFieldNames": Immutable.List [],
          "reservedFieldNames": Immutable.List [],
          "newDesignFields": undefined,
          "instructions": undefined,
          "domainKindName": undefined,
          "schemaName": undefined,
          "queryName": undefined,
          "disabledSystemFields": undefined,
        },
        "autoLinkTargetContainerId": undefined,
        "autoLinkCategory": undefined,
        "excludedContainerIds": undefined,
        "exception": undefined,
      }
    }
    nameExpressionInfoUrl="https://www.labkey.org/Documentation/wiki-page.view?referrer=inPage&name=sampleIDs"
    nameExpressionPlaceholder="Enter a naming pattern (e.g., S-\${now:date}-\${dailySampleCount})"
    namePreviews={
      [
        null,
        "S-parentSample-1",
      ]
    }
    nounPlural="Sample Types"
    nounSingular="Sample Type"
    onAddParentAlias={[Function]}
    onAddUniqueIdField={[Function]}
    onParentAliasChange={[Function]}
    onRemoveParentAlias={[Function]}
    panelStatus="NONE"
    parentAliasHelpText="Column headings used during import to set a sample's parentage. The referenced type will also be added as a parent type by default when adding samples manually."
    parentOptions={[]}
    sampleAliasCaption="Sample Alias"
    sampleTypeCaption="Sample Type"
    showLinkToStudy={true}
    togglePanel={[Function]}
    updateModel={[Function]}
    useTheme={false}
    validate={false}
  >
    <BasePropertiesPanel
      aliquotNamePatternProps={
        {
          "showAliquotNameExpression": true,
        }
      }
      appPropertiesOnly={false}
      collapsed={false}
      controlledCollapse={false}
      dataClassAliasCaption="Data Class Alias"
      dataClassParentageLabel="data class"
      dataClassTypeCaption="Data Class"
      headerId="sample-type-properties-hdr"
      helpTopic="createSampleSet"
      isValid={true}
      metricUnitProps={
        {
          "metricUnitHelpMsg": "The unit of measurement used for the sample type.",
          "metricUnitLabel": "Metric Unit",
        }
      }
      model={
        Immutable.Record {
          "rowId": 1,
          "name": undefined,
          "nameReadOnly": undefined,
          "nameExpression": undefined,
          "aliquotNameExpression": "S-\${\${AliquotedFrom.:withCounter}}",
          "description": undefined,
          "labelColor": undefined,
          "metricUnit": undefined,
          "parentAliases": undefined,
          "importAliases": Immutable.Map {},
          "domainId": undefined,
          "domain": Immutable.Record {
            "name": undefined,
            "container": undefined,
            "description": undefined,
            "domainURI": undefined,
            "domainId": null,
            "allowFileLinkProperties": false,
            "allowAttachmentProperties": false,
            "allowFlagProperties": true,
            "allowSampleSubjectProperties": true,
            "allowTextChoiceProperties": true,
            "allowTimepointProperties": false,
            "allowUserProperties": true,
            "showDefaultValueSettings": false,
            "defaultDefaultValueType": undefined,
            "defaultValueOptions": Immutable.List [],
            "fields": Immutable.List [],
            "indices": Immutable.List [],
            "domainException": undefined,
            "mandatoryFieldNames": Immutable.List [],
            "reservedFieldNames": Immutable.List [],
            "newDesignFields": undefined,
            "instructions": undefined,
            "domainKindName": undefined,
            "schemaName": undefined,
            "queryName": undefined,
            "disabledSystemFields": undefined,
          },
          "autoLinkTargetContainerId": undefined,
          "autoLinkCategory": undefined,
          "excludedContainerIds": undefined,
          "exception": undefined,
        }
      }
      nameExpressionInfoUrl="https://www.labkey.org/Documentation/wiki-page.view?referrer=inPage&name=sampleIDs"
      nameExpressionPlaceholder="Enter a naming pattern (e.g., S-\${now:date}-\${dailySampleCount})"
      namePreviews={
        [
          null,
          "S-parentSample-1",
        ]
      }
      nounPlural="Sample Types"
      nounSingular="Sample Type"
      onAddParentAlias={[Function]}
      onAddUniqueIdField={[Function]}
      onParentAliasChange={[Function]}
      onRemoveParentAlias={[Function]}
      panelStatus="NONE"
      parentAliasHelpText="Column headings used during import to set a sample's parentage. The referenced type will also be added as a parent type by default when adding samples manually."
      parentOptions={[]}
      sampleAliasCaption="Sample Alias"
      sampleTypeCaption="Sample Type"
      showLinkToStudy={true}
      title="Sample Type Properties"
      togglePanel={[Function]}
      updateModel={[Function]}
      updateValidStatus={[Function]}
      useTheme={false}
      validate={false}
    >
      <ForwardRef
        className="domain-form-panel domain-panel-no-theme"
        expanded={true}
        onToggle={[Function]}
      >
        <Uncontrolled(Panel)
          className="domain-form-panel domain-panel-no-theme"
          expanded={true}
          innerRef={null}
          onToggle={[Function]}
        >
          <Panel
            bsClass="panel"
            bsStyle="default"
            className="domain-form-panel domain-panel-no-theme"
            expanded={true}
            onToggle={[Function]}
          >
            <div
              className="domain-form-panel domain-panel-no-theme panel panel-default"
            >
              <CollapsiblePanelHeader
                collapsed={false}
                controlledCollapse={false}
                iconHelpMsg="Contains errors or is missing required values."
                id="sample-type-properties-hdr"
                isValid={true}
                panelStatus="NONE"
                title="Sample Type Properties"
                togglePanel={[Function]}
                useTheme={false}
              >
                <div
                  className="domain-panel-header panel-heading domain-panel-header-expanded domain-panel-header-no-theme"
                  id="sample-type-properties-hdr"
                  onClick={[Function]}
                >
                  <span
                    className="domain-panel-title"
                  >
                    Sample Type Properties
                  </span>
                </div>
              </CollapsiblePanelHeader>
              <PanelBody
                bsClass="panel"
                collapsible={false}
              >
                <div
                  className="panel-body"
                >
                  <Row
                    bsClass="row"
                    className="margin-bottom"
                    componentClass="div"
                  >
                    <div
                      className="margin-bottom row"
                    >
                      <Col
                        bsClass="col"
                        componentClass="div"
                        xs={12}
                      >
                        <div
                          className="col-xs-12"
                        >
                          <HelpTopicURL
                            helpTopic="createSampleSet"
                            nounPlural="Sample Types"
                          >
                            <Row
                              bsClass="row"
                              componentClass="div"
                            >
                              <div
                                className="row"
                              >
                                <Col
                                  bsClass="col"
                                  componentClass="div"
                                  xs={12}
                                >
                                  <div
                                    className="col-xs-12"
                                  >
                                    <HelpLink
                                      className="domain-field-float-right"
                                      topic="createSampleSet"
                                    >
                                      <a
                                        className="domain-field-float-right"
                                        href="https://www.labkey.org/Documentation/wiki-page.view?referrer=inPage&name=createSampleSet"
                                        rel="noopener noreferrer"
                                        target="_blank"
                                      >
                                        Learn more about designing sample types
                                      </a>
                                    </HelpLink>
                                  </div>
                                </Col>
                              </div>
                            </Row>
                          </HelpTopicURL>
                        </div>
                      </Col>
                    </div>
                  </Row>
                  <EntityDetailsForm
                    data={
                      Immutable.Record {
                        "rowId": 1,
                        "name": undefined,
                        "nameReadOnly": undefined,
                        "nameExpression": undefined,
                        "aliquotNameExpression": "S-\${\${AliquotedFrom.:withCounter}}",
                        "description": undefined,
                        "labelColor": undefined,
                        "metricUnit": undefined,
                        "parentAliases": undefined,
                        "importAliases": Immutable.Map {},
                        "domainId": undefined,
                        "domain": Immutable.Record {
                          "name": undefined,
                          "container": undefined,
                          "description": undefined,
                          "domainURI": undefined,
                          "domainId": null,
                          "allowFileLinkProperties": false,
                          "allowAttachmentProperties": false,
                          "allowFlagProperties": true,
                          "allowSampleSubjectProperties": true,
                          "allowTextChoiceProperties": true,
                          "allowTimepointProperties": false,
                          "allowUserProperties": true,
                          "showDefaultValueSettings": false,
                          "defaultDefaultValueType": undefined,
                          "defaultValueOptions": Immutable.List [],
                          "fields": Immutable.List [],
                          "indices": Immutable.List [],
                          "domainException": undefined,
                          "mandatoryFieldNames": Immutable.List [],
                          "reservedFieldNames": Immutable.List [],
                          "newDesignFields": undefined,
                          "instructions": undefined,
                          "domainKindName": undefined,
                          "schemaName": undefined,
                          "queryName": undefined,
                          "disabledSystemFields": undefined,
                        },
                        "autoLinkTargetContainerId": undefined,
                        "autoLinkCategory": undefined,
                        "excludedContainerIds": undefined,
                        "exception": undefined,
                      }
                    }
                    nameExpressionInfoUrl="https://www.labkey.org/Documentation/wiki-page.view?referrer=inPage&name=sampleIDs"
                    nameExpressionPlaceholder="Enter a naming pattern (e.g., S-\${now:date}-\${dailySampleCount})"
                    noun="Sample Type"
                    onFormChange={[Function]}
                    previewName={null}
                    showPreviewName={false}
                  >
                    <Form
                      bsClass="form"
                      componentClass="form"
                      horizontal={false}
                      inline={false}
                    >
                      <form
                        className=""
                      >
                        <Row
                          bsClass="row"
                          className="margin-bottom margin-top"
                          componentClass="div"
                        >
                          <div
                            className="margin-bottom margin-top row"
                          >
                            <Col
                              bsClass="col"
                              componentClass="div"
                              xs={2}
                            >
                              <div
                                className="col-xs-2"
                              >
                                <DomainFieldLabel
                                  label="Name"
                                  required={true}
                                >
                                  <span
                                    className="domain-no-wrap"
                                  >
                                    Name
                                     *
                                  </span>
                                </DomainFieldLabel>
                              </div>
                            </Col>
                            <Col
                              bsClass="col"
                              componentClass="div"
                              xs={10}
                            >
                              <div
                                className="col-xs-10"
                              >
                                <FormControl
                                  bsClass="form-control"
                                  componentClass="input"
                                  id="entity-name"
                                  onChange={[Function]}
                                  placeholder="Enter a name for this sample type"
                                  type="text"
                                  value=""
                                >
                                  <input
                                    className="form-control"
                                    id="entity-name"
                                    onChange={[Function]}
                                    placeholder="Enter a name for this sample type"
                                    type="text"
                                    value=""
                                  />
                                </FormControl>
                              </div>
                            </Col>
                          </div>
                        </Row>
                        <Row
                          bsClass="row"
                          className="margin-bottom"
                          componentClass="div"
                        >
                          <div
                            className="margin-bottom row"
                          >
                            <Col
                              bsClass="col"
                              componentClass="div"
                              xs={2}
                            >
                              <div
                                className="col-xs-2"
                              >
                                <DomainFieldLabel
                                  helpTipBody="A short description for this sample type."
                                  label="Description"
                                >
                                  <span
                                    className="domain-no-wrap"
                                  >
                                    Description
                                    <Component
                                      id="tooltip"
                                      title="Description"
                                    >
                                      <span
                                        className="label-help-target"
                                        onMouseOut={[Function]}
                                        onMouseOver={[Function]}
                                      >
                                        <span
                                          className="label-help-icon fa fa-question-circle"
                                        />
                                        <Overlay
                                          animation={[Function]}
                                          placement="right"
                                          rootClose={false}
                                          show={false}
                                        >
                                          <Overlay
                                            placement="right"
                                            rootClose={false}
                                            show={false}
                                            transition={[Function]}
                                          />
                                        </Overlay>
                                      </span>
                                    </Component>
                                  </span>
                                </DomainFieldLabel>
                              </div>
                            </Col>
                            <Col
                              bsClass="col"
                              componentClass="div"
                              xs={10}
                            >
                              <div
                                className="col-xs-10"
                              >
                                <textarea
                                  className="form-control"
                                  id="entity-description"
                                  onChange={[Function]}
                                  value=""
                                />
                              </div>
                            </Col>
                          </div>
                        </Row>
                        <Row
                          bsClass="row"
                          className="margin-bottom"
                          componentClass="div"
                        >
                          <div
                            className="margin-bottom row"
                          >
                            <Col
                              bsClass="col"
                              componentClass="div"
                              xs={2}
                            >
                              <div
                                className="col-xs-2"
                              >
                                <div
                                  className="name-expression-label-div"
                                  onMouseEnter={[Function]}
                                >
                                  <DomainFieldLabel
                                    helpTipBody={
                                      <React.Fragment>
                                        <p>
                                          Pattern used for generating unique IDs for this 
                                          sample type
                                          .
                                        </p>
                                        <p>
                                          <a
                                            href="https://www.labkey.org/Documentation/wiki-page.view?referrer=inPage&name=sampleIDs"
                                            rel="noopener noreferrer"
                                            target="_blank"
                                          >
                                            More info
                                          </a>
                                        </p>
                                      </React.Fragment>
                                    }
                                    label="Naming Pattern"
                                  >
                                    Naming 
                                    <span
                                      className="domain-no-wrap"
                                    >
                                      Pattern
                                      <Component
                                        id="tooltip"
                                        title="Naming Pattern"
                                      >
                                        <span
                                          className="label-help-target"
                                          onMouseOut={[Function]}
                                          onMouseOver={[Function]}
                                        >
                                          <span
                                            className="label-help-icon fa fa-question-circle"
                                          />
                                          <Overlay
                                            animation={[Function]}
                                            placement="right"
                                            rootClose={false}
                                            show={false}
                                          >
                                            <Overlay
                                              placement="right"
                                              rootClose={false}
                                              show={false}
                                              transition={[Function]}
                                            />
                                          </Overlay>
                                        </span>
                                      </Component>
                                    </span>
                                  </DomainFieldLabel>
                                </div>
                              </div>
                            </Col>
                            <Col
                              bsClass="col"
                              componentClass="div"
                              xs={10}
                            >
                              <div
                                className="col-xs-10"
                              >
                                <FormControl
                                  bsClass="form-control"
                                  className=""
                                  componentClass="input"
                                  id="entity-nameExpression"
                                  onChange={[Function]}
                                  placeholder="Enter a naming pattern (e.g., S-\${now:date}-\${dailySampleCount})"
                                  type="text"
                                  value=""
                                >
                                  <input
                                    className="form-control"
                                    id="entity-nameExpression"
                                    onChange={[Function]}
                                    placeholder="Enter a naming pattern (e.g., S-\${now:date}-\${dailySampleCount})"
                                    type="text"
                                    value=""
                                  />
                                </FormControl>
                              </div>
                            </Col>
                          </div>
                        </Row>
                      </form>
                    </Form>
                  </EntityDetailsForm>
                  <Row
                    bsClass="row"
                    className="margin-bottom"
                    componentClass="div"
                  >
                    <div
                      className="margin-bottom row"
                    >
                      <Col
                        bsClass="col"
                        componentClass="div"
                        xs={2}
                      >
                        <div
                          className="col-xs-2"
                        >
                          <div
                            onMouseEnter={[Function]}
                          >
                            <DomainFieldLabel
                              helpTipBody={
                                <React.Fragment>
                                  <p>
                                    Pattern used for generating unique Ids for Aliquots.
                                  </p>
                                  <p>
                                    By default, the name of the aliquot will use the name of its parent followed by a dash and a counter for that parent’s aliquots.
                                  </p>
                                  <p>
                                    For example, if the original sample is S1, aliquots of that sample will be named S1-1, S1-2, etc.
                                  </p>
                                  <NameExpressionPreview
                                    previewName="S-parentSample-1"
                                  />
                                  <p>
                                    <a
                                      href="https://www.labkey.org/Documentation/wiki-page.view?referrer=inPage&name=aliquotIDs"
                                      rel="noopener noreferrer"
                                      target="_blank"
                                    >
                                      More info
                                    </a>
                                  </p>
                                </React.Fragment>
                              }
                              label="Aliquot Naming Pattern"
                            >
                              Aliquot Naming 
                              <span
                                className="domain-no-wrap"
                              >
                                Pattern
                                <Component
                                  id="tooltip"
                                  title="Aliquot Naming Pattern"
                                >
                                  <span
                                    className="label-help-target"
                                    onMouseOut={[Function]}
                                    onMouseOver={[Function]}
                                  >
                                    <span
                                      className="label-help-icon fa fa-question-circle"
                                    />
                                    <Overlay
                                      animation={[Function]}
                                      placement="right"
                                      rootClose={false}
                                      show={false}
                                    >
                                      <Overlay
                                        placement="right"
                                        rootClose={false}
                                        show={false}
                                        transition={[Function]}
                                      />
                                    </Overlay>
                                  </span>
                                </Component>
                              </span>
                            </DomainFieldLabel>
                          </div>
                        </div>
                      </Col>
                      <Col
                        bsClass="col"
                        componentClass="div"
                        xs={10}
                      >
                        <div
                          className="col-xs-10"
                        >
                          <FormControl
                            bsClass="form-control"
                            className=""
                            componentClass="input"
                            name="aliquotNameExpression"
                            onChange={[Function]}
                            placeholder="Enter a naming pattern for aliquots (e.g., \${\${AliquotedFrom}-:withCounter})"
                            type="text"
                            value="S-\${\${AliquotedFrom.:withCounter}}"
                          >
                            <input
                              className="form-control"
                              name="aliquotNameExpression"
                              onChange={[Function]}
                              placeholder="Enter a naming pattern for aliquots (e.g., \${\${AliquotedFrom}-:withCounter})"
                              type="text"
                              value="S-\${\${AliquotedFrom.:withCounter}}"
                            />
                          </FormControl>
                        </div>
                      </Col>
                    </div>
                  </Row>
                  <Memo()
                    addEntityHelp={
                      <React.Fragment>
                        <p>
                          Column headings used during import to set a sample's parentage. The referenced type will also be added as a parent type by default when adding samples manually.
                        </p>
                        <p>
                          <HelpLink
                            topic="deriveSamples#alias"
                          >
                            More info
                          </HelpLink>
                        </p>
                      </React.Fragment>
                    }
                    aliquotNamePatternProps={
                      {
                        "showAliquotNameExpression": true,
                      }
                    }
                    appPropertiesOnly={false}
                    collapsed={false}
                    controlledCollapse={false}
                    dataClassAliasCaption="Data Class Alias"
                    dataClassParentageLabel="data class"
                    dataClassTypeCaption="Data Class"
                    helpTopic="createSampleSet"
                    idPrefix="sampletype-parent-import-alias-"
                    includeSampleSet={true}
                    metricUnitProps={
                      {
                        "metricUnitHelpMsg": "The unit of measurement used for the sample type.",
                        "metricUnitLabel": "Metric Unit",
                      }
                    }
                    model={
                      Immutable.Record {
                        "rowId": 1,
                        "name": undefined,
                        "nameReadOnly": undefined,
                        "nameExpression": undefined,
                        "aliquotNameExpression": "S-\${\${AliquotedFrom.:withCounter}}",
                        "description": undefined,
                        "labelColor": undefined,
                        "metricUnit": undefined,
                        "parentAliases": undefined,
                        "importAliases": Immutable.Map {},
                        "domainId": undefined,
                        "domain": Immutable.Record {
                          "name": undefined,
                          "container": undefined,
                          "description": undefined,
                          "domainURI": undefined,
                          "domainId": null,
                          "allowFileLinkProperties": false,
                          "allowAttachmentProperties": false,
                          "allowFlagProperties": true,
                          "allowSampleSubjectProperties": true,
                          "allowTextChoiceProperties": true,
                          "allowTimepointProperties": false,
                          "allowUserProperties": true,
                          "showDefaultValueSettings": false,
                          "defaultDefaultValueType": undefined,
                          "defaultValueOptions": Immutable.List [],
                          "fields": Immutable.List [],
                          "indices": Immutable.List [],
                          "domainException": undefined,
                          "mandatoryFieldNames": Immutable.List [],
                          "reservedFieldNames": Immutable.List [],
                          "newDesignFields": undefined,
                          "instructions": undefined,
                          "domainKindName": undefined,
                          "schemaName": undefined,
                          "queryName": undefined,
                          "disabledSystemFields": undefined,
                        },
                        "autoLinkTargetContainerId": undefined,
                        "autoLinkCategory": undefined,
                        "excludedContainerIds": undefined,
                        "exception": undefined,
                      }
                    }
                    nameExpressionInfoUrl="https://www.labkey.org/Documentation/wiki-page.view?referrer=inPage&name=sampleIDs"
                    nameExpressionPlaceholder="Enter a naming pattern (e.g., S-\${now:date}-\${dailySampleCount})"
                    namePreviews={
                      [
                        null,
                        "S-parentSample-1",
                      ]
                    }
                    nounPlural="Sample Types"
                    nounSingular="Sample Type"
                    onAddParentAlias={[Function]}
                    onAddUniqueIdField={[Function]}
                    onParentAliasChange={[Function]}
                    onRemoveParentAlias={[Function]}
                    panelStatus="NONE"
                    parentAliasHelpText="Column headings used during import to set a sample's parentage. The referenced type will also be added as a parent type by default when adding samples manually."
                    parentOptions={[]}
                    sampleAliasCaption="Sample Alias"
                    sampleTypeCaption="Sample Type"
                    schema="samples"
                    showAddBtn={true}
                    showLinkToStudy={true}
                    togglePanel={[Function]}
                    updateModel={[Function]}
                    useTheme={false}
                    validate={false}
                  >
                    <Row
                      bsClass="row"
                      componentClass="div"
                    >
                      <div
                        className="row"
                      >
                        <Col
                          bsClass="col"
                          componentClass="div"
                          xs={2}
                        >
                          <div
                            className="col-xs-2"
                          />
                        </Col>
                        <Col
                          bsClass="col"
                          componentClass="div"
                          xs={10}
                        >
                          <div
                            className="col-xs-10"
                          >
                            <span>
                              <AddEntityButton
                                helperBody={
                                  <React.Fragment>
                                    <p>
                                      Column headings used during import to set a sample's parentage. The referenced type will also be added as a parent type by default when adding samples manually.
                                    </p>
                                    <p>
                                      <HelpLink
                                        topic="deriveSamples#alias"
                                      >
                                        More info
                                      </HelpLink>
                                    </p>
                                  </React.Fragment>
                                }
                                onClick={[Function]}
                              >
                                <ActionButton
                                  containerClass="form-group"
                                  helperBody={
                                    <React.Fragment>
                                      <p>
                                        Column headings used during import to set a sample's parentage. The referenced type will also be added as a parent type by default when adding samples manually.
                                      </p>
                                      <p>
                                        <HelpLink
                                          topic="deriveSamples#alias"
                                        >
                                          More info
                                        </HelpLink>
                                      </p>
                                    </React.Fragment>
                                  }
                                  helperTitle="More Info"
                                  onClick={[Function]}
                                >
                                  <div
                                    className="form-group"
                                  >
                                    <div>
                                      <span
                                        className="container--action-button btn btn-default"
                                        onClick={[Function]}
                                      >
                                        <i
                                          className="fa fa-plus-circle container--addition-icon"
                                        />
                                         Add 
                                      </span>
                                      <Component
                                        id="tooltip"
                                        title="More Info"
                                      >
                                        <span
                                          className="label-help-target"
                                          onMouseOut={[Function]}
                                          onMouseOver={[Function]}
                                        >
                                          <span
                                            className="label-help-icon fa fa-question-circle"
                                          />
                                          <Overlay
                                            animation={[Function]}
                                            placement="right"
                                            rootClose={false}
                                            show={false}
                                          >
                                            <Overlay
                                              placement="right"
                                              rootClose={false}
                                              show={false}
                                              transition={[Function]}
                                            />
                                          </Overlay>
                                        </span>
                                      </Component>
                                    </div>
                                  </div>
                                </ActionButton>
                              </AddEntityButton>
                            </span>
                          </div>
                        </Col>
                      </div>
                    </Row>
                  </Memo()>
                  <SectionHeading
                    cls="top-spacing"
                    title="Storage Settings"
                  >
                    <div
                      className="domain-field-section-heading top-spacing"
                    >
                      Storage Settings
                    </div>
                  </SectionHeading>
                  <Row
                    bsClass="row"
                    className="margin-top"
                    componentClass="div"
                  >
                    <div
                      className="margin-top row"
                    >
                      <Col
                        bsClass="col"
                        componentClass="div"
                        xs={2}
                      >
                        <div
                          className="col-xs-2"
                        >
                          <DomainFieldLabel
                            helpTipBody={
                              <React.Fragment>
                                <p>
                                  Use a Unique ID field to represent barcodes or other ID fields in use in your lab.
                                </p>
                                <p>
                                  Learn more about using 
                                  <HelpLink
                                    topic="uniqueStorageIds"
                                  >
                                    barcodes and unique IDs
                                  </HelpLink>
                                   in
                                   
                                  LabKey Server
                                  .
                                </p>
                              </React.Fragment>
                            }
                            label="Barcodes"
                          >
                            <span
                              className="domain-no-wrap"
                            >
                              Barcodes
                              <Component
                                id="tooltip"
                                title="Barcodes"
                              >
                                <span
                                  className="label-help-target"
                                  onMouseOut={[Function]}
                                  onMouseOver={[Function]}
                                >
                                  <span
                                    className="label-help-icon fa fa-question-circle"
                                  />
                                  <Overlay
                                    animation={[Function]}
                                    placement="right"
                                    rootClose={false}
                                    show={false}
                                  >
                                    <Overlay
                                      placement="right"
                                      rootClose={false}
                                      show={false}
                                      transition={[Function]}
                                    />
                                  </Overlay>
                                </span>
                              </Component>
                            </span>
                          </DomainFieldLabel>
                        </div>
                      </Col>
                      <Col
                        bsClass="col"
                        componentClass="div"
                        xs={10}
                      >
                        <div
                          className="col-xs-10"
                        >
                          <Memo()
                            isFieldsPanel={false}
                            model={
                              Immutable.Record {
                                "rowId": 1,
                                "name": undefined,
                                "nameReadOnly": undefined,
                                "nameExpression": undefined,
                                "aliquotNameExpression": "S-\${\${AliquotedFrom.:withCounter}}",
                                "description": undefined,
                                "labelColor": undefined,
                                "metricUnit": undefined,
                                "parentAliases": undefined,
                                "importAliases": Immutable.Map {},
                                "domainId": undefined,
                                "domain": Immutable.Record {
                                  "name": undefined,
                                  "container": undefined,
                                  "description": undefined,
                                  "domainURI": undefined,
                                  "domainId": null,
                                  "allowFileLinkProperties": false,
                                  "allowAttachmentProperties": false,
                                  "allowFlagProperties": true,
                                  "allowSampleSubjectProperties": true,
                                  "allowTextChoiceProperties": true,
                                  "allowTimepointProperties": false,
                                  "allowUserProperties": true,
                                  "showDefaultValueSettings": false,
                                  "defaultDefaultValueType": undefined,
                                  "defaultValueOptions": Immutable.List [],
                                  "fields": Immutable.List [],
                                  "indices": Immutable.List [],
                                  "domainException": undefined,
                                  "mandatoryFieldNames": Immutable.List [],
                                  "reservedFieldNames": Immutable.List [],
                                  "newDesignFields": undefined,
                                  "instructions": undefined,
                                  "domainKindName": undefined,
                                  "schemaName": undefined,
                                  "queryName": undefined,
                                  "disabledSystemFields": undefined,
                                },
                                "autoLinkTargetContainerId": undefined,
                                "autoLinkCategory": undefined,
                                "excludedContainerIds": undefined,
                                "exception": undefined,
                              }
                            }
                            onAddField={[Function]}
                          >
                            <Alert
                              bsStyle="info"
                              className="uniqueid-alert"
                            >
                              <Alert
                                bsClass="alert"
                                bsStyle="info"
                                className="uniqueid-alert"
                                closeLabel="Close alert"
                              >
                                <div
                                  className="uniqueid-alert alert alert-info"
                                  role="alert"
                                >
                                  Do you want to add a unique ID field to create barcodes for this sample type?
                                  <Button
                                    active={false}
                                    block={false}
                                    bsClass="btn"
                                    bsStyle="info"
                                    className="pull-right alert-button"
                                    disabled={false}
                                    onClick={[Function]}
                                  >
                                    <button
                                      className="pull-right alert-button btn btn-info"
                                      disabled={false}
                                      onClick={[Function]}
                                      type="button"
                                    >
                                      Yes, Add Unique ID Field
                                    </button>
                                  </Button>
                                </div>
                              </Alert>
                            </Alert>
                          </Memo()>
                        </div>
                      </Col>
                    </div>
                  </Row>
                </div>
              </PanelBody>
            </div>
          </Panel>
        </Uncontrolled(Panel)>
      </ForwardRef>
    </BasePropertiesPanel>
  </SampleTypePropertiesPanelImpl>
</ComponentWithDomainPropertiesPanelCollapse>
`;
